<resources>
    <string name="app_name">Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="sign_in">登入</string>
    <string name="sign_up">注册</string>
    <string name="forget">忘记密码</string>
    <string name="or">或</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
