<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sky"
            android:adjustViewBounds="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_launcher_test_round"/>
    </FrameLayout>
    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/edit_underline_selector"
        android:textCursorDrawable="@null"
        android:hint="@string/username"
        android:inputType="text" />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/edit_underline_selector"
        android:textCursorDrawable="@null"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/login_sign_in"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:background="@color/colorButtonBlue"/>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sign_up"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorUnderlineBlue"
            android:background="@android:color/transparent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/forget"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorUnderlineBlue"
            android:background="@android:color/transparent"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="25dp">
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:background="@color/gap_color"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@android:color/black"
            />
        <View
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="10dp"
            android:background="@color/gap_color"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <ImageButton
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_wechat"
            android:background="@android:color/transparent"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_facebook"
            android:background="@android:color/transparent"/>
    </LinearLayout>
</LinearLayout>